--- a/404.md
+++ b/404.md
@@ -2,7 +2,9 @@
 
 [Back](https://linbei9487.github.io)
 
-take these ponies instead
+# 404錯誤!<br>
+這小馬怎麼這麼可愛❤❤❤<br>
+take these cute ponies instead❤
 <br>
 
 ![Pony trot2](img/pony3.gif)
