--- a/404.md
+++ b/404.md
@@ -1,12 +1,8 @@
 ---
 title: 404 Error
-layout: template
+layout: back
 filename: 404
 --- 
-
-## 404 找不到網頁
-
-[返回](https://linbei9487.github.io)
 
 # 404錯誤!<br>
 這小馬怎麼這麼可愛❤❤❤<br>
