--- a/pony/G4/S1.md
+++ b/pony/G4/S1.md
@@ -112,7 +112,7 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/4/40/Apple_Bloom_doing_karate_S1E12.png)
 ![](https://static.wikia.nocookie.net/mlp/images/c/cc/Pinkie_Pie_happily_singing_the_cupcake_song_S1E12.png)
 ![](https://static.wikia.nocookie.net/mlp/images/b/bb/Scootaloo_commenting_on_Diamond_Tiara_S1E12.png)<br>
-推薦:![Pinkie Brew](https://www.youtube.com/watch?v=682pneYoP0c)<br>
+推薦:[Pinkie Brew](https://www.youtube.com/watch?v=682pneYoP0c)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic.html)
  
@@ -130,7 +130,7 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/2/23/Rainbow_Dash_%27the_what_now%27_S1E14.png)
 ![](https://static.wikia.nocookie.net/mlp/images/1/12/Rarity_being_overwhelmed_with_pressure_S1E14.png)
 ![](https://static.wikia.nocookie.net/mlp/images/b/b8/Rainbow_Dash_wants_her_dress_to_be_cool_S1E14.png)
-![](https://static.wikia.nocookie.net/mlp/images/6/64/It%27s_all_in_the_presentation%21_S1E14.png/revision/latest/scale-to-width-down/201?cb=20120719061955)<br>
+![](https://static.wikia.nocookie.net/mlp/images/6/64/It%27s_all_in_the_presentation%21_S1E14.png)<br>
 20% Cooler<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_10.html)
