--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -122,4 +122,4 @@ filename: ponyG4S3
  
 
 # 前往下一季
-[](https://linbei9487.github.io/pony/G4/S4)    
+[點擊此處](https://linbei9487.github.io/pony/G4/S4)    
