--- a/pony/G4/S1.md
+++ b/pony/G4/S1.md
@@ -246,4 +246,4 @@ Hmmmmm....<br>
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_13.html)    
 
 # 前往下一季
-[](https://linbei9487.github.io/pony/G4/S2)    
+[點擊此處](https://linbei9487.github.io/pony/G4/S2)    
