--- a/pony/G4/S5.md
+++ b/pony/G4/S5.md
@@ -240,4 +240,4 @@ filename: ponyG4S5
 [點擊此處](    
 
 # 前往下一季
-[](https://linbei9487.github.io/pony/G4/S6)    
+[點擊此處](https://linbei9487.github.io/pony/G4/S6)    
