--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -3,241 +3,241 @@ title: Twilight's Library Season 2
 layout: backpony
 filename: ponyG4S2
 --- 
-# S1E01 
+# S2E01 
 ## The Return of Harmony, part 1
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E02 
+# S2E02 
 ## The Return of Harmony, part 2
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E03
+# S2E03
 ## Lesson Zero
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E04
+# S2E04
 ## Luna Eclipsed
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E05
+# S2E05
 ## Sisterhooves Social
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E06
+# S2E06
 ## The Cutie Pox
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E07
+# S2E07
 ## May the Best Pet Wins!
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E08
+# S2E08
 ## The Mysterious Mare Do Well
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E09
+# S2E09
 ## Sweet and Elite
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E10
+# S2E10
 ## Secret of My Excess
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E11
+# S2E11
 ## Hearth's Warming Eve
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E12
+# S2E12
 ## Family Appreciation Day
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E13
+# S2E13
 ## Baby Cakes
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E14
+# S2E14
 ## The Last Roundup
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E15
+# S2E15
 ## The Super Speed Cider Squeezy 6000
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E16
+# S2E16
 ## Read It and Weep
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E17
+# S2E17
 ## Hearts and Hooves Day
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E18
+# S2E18
 ## A Friend in Deed
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E19
+# S2E19
 ## APutting Your Hoof Down
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E20 
+# S2E20 
 ## It's About time
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E21 
+# S2E21 
 ## Dragon quest
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E22 
+# S2E22 
 ## Hurricane Fluttershy
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E23 
+# S2E23 
 ## Ponyville Confidential
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
 
 
-# S1E24
+# S2E24
 ## MMMystery on the Friendship Express
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
     
-# S1E25
+# S2E25
 ## A Canterlot Wedding - Part 1
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E26
+# S2E26
 ## A Canterlot Wedding - Part 2
-![](
-![](
-![](
-![](<br>
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](    
+[點擊此處]()    
 
 # 前往下一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S3)    
