--- a/pony/G4/S4.md
+++ b/pony/G4/S4.md
@@ -3,241 +3,240 @@ title: Twilight's Library Season 4
 layout: backpony
 filename: ponyG4S4
 --- 
-# S1E01 
-## Friendship is Magic, part 1
-![](
-![](
-![](
-![](<br>
+# S4E01 
+## The Return of Harmony, part 1
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E02 
-## Friendship is Magic, part 2
-![](
-![](
-![](
-![](<br>
+# S4E02 
+## The Return of Harmony, part 2
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E03
-## The Ticket Master
-![](
-![](
-![](
-![](<br>
+# S4E03
+## Lesson Zero
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E04
-## Applebuck Season
-![](
-![](
-![](
-![](<br>
+# S4E04
+## Luna Eclipsed
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E05
-## Griffon the Brush Off
-![](
-![](
-![](
-![](<br>
+# S4E05
+## Sisterhooves Social
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E06
-## Boast Busters
-![](
-![](
-![](
-![](<br>
+# S4E06
+## The Cutie Pox
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E07
-## Dragonshy
-![](
-![](
-![](
-![](<br>
+# S4E07
+## May the Best Pet Wins!
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E08
-## Look Before You Sleep
-![](
-![](
-![](
-![](<br>
+# S4E08
+## The Mysterious Mare Do Well
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E09
-## Bridle Gossip
-![](
-![](
-![](
-![](<br>
+# S4E09
+## Sweet and Elite
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E10
-## Swarm of the Century
-![](
-![](
-![](
-![](<br>
+# S4E10
+## Secret of My Excess
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E11
-## Winter Warp up
-![](
-![](
-![](
-![](<br>
+# S4E11
+## Hearth's Warming Eve
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E12
-## Call of the Cutie
-![](
-![](
-![](
-![](<br>
+# S4E12
+## Family Appreciation Day
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E13
-## Fall Weather Friends
-![](
-![](
-![](
-![](<br>
+# S4E13
+## Baby Cakes
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E14
-## Suited For Success
-![](
-![](
-![](
-![](<br>
+# S4E14
+## The Last Roundup
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E15
-## Feeling Pinkie Keen
-![](
-![](
-![](
-![](<br>
+# S4E15
+## The Super Speed Cider Squeezy 6000
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E16
-## Sonic Rainboom
-![](
-![](
-![](
-![](<br>
+# S4E16
+## Read It and Weep
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E17
-## Stare Master
-![](
-![](
-![](
-![](<br>
+# S4E17
+## Hearts and Hooves Day
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E18
-## The Show Stoppers
-![](
-![](
-![](
-![](<br>
+# S4E18
+## A Friend in Deed
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E19
-## A Dog and Pony show
-![](
-![](
-![](
-![](<br>
+# S4E19
+## APutting Your Hoof Down
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
  
-# S1E20 
-## Green Isn't Your Color
-![](
-![](
-![](
-![](<br>
+# S4E20 
+## It's About time
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E21 
-## Over a Barrel
-![](
-![](
-![](
-![](<br>
+# S4E21 
+## Dragon quest
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E22 
-## A Bird in the Hoof
-![](
-![](
-![](
-![](<br>
+# S4E22 
+## Hurricane Fluttershy
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E23 
-## The Cutie Mark Chronicles
-![](
-![](
-![](
-![](<br>
+# S4E23 
+## Ponyville Confidential
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
 
 
-# S1E24
-## Owl's Well That Ends Well
-![](
-![](
-![](
-![](<br>
+# S4E24
+## MMMystery on the Friendship Express
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
     
-# S1E25
-## Party of One
-![](
-![](
-![](
-![](<br>
+# S4E25
+## A Canterlot Wedding - Part 1
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](
+[點擊此處]()
 
-# S1E26
-## The Best Night Ever
-![](
-![](
-![](
-![](<br>
+# S4E26
+## A Canterlot Wedding - Part 2
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)
+[![]()](/revision/latest/scale-to-width-down/1000)<br>
 ## 進入小馬國
-[點擊此處](    
-
+[點擊此處]()
 # 前往下一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S5)    
