--- a/pony/G4/S4.md
+++ b/pony/G4/S4.md
@@ -3,6 +3,39 @@ title: Twilight's Library Season 4
 layout: backpony
 filename: ponyG4S4
 --- 
+# WARNING!
+## 本季開始具有1~3季的延伸劇情
+若未完成請先返回觀看1~3季<br>
+避免影響觀看體驗<br>
+[跳過防雷](https://linbei9487.gitub.io/pony/G4/S4#s4e01)
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+防雷<br>
+
+
 # S4E01 
 ## Friendship is Magic, part 1
 ![]()
