--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -5,138 +5,140 @@ filename: ponyG4S2
 --- 
 # S2E01 
 ## The Return of Harmony, part 1
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/e/e3/Cheerilee_sighs_S2E01.png)
+![](https://static.wikia.nocookie.net/mlp/images/3/34/Epic_blue_and_purple_ring_of_magic_S2E01.png)
+![](https://static.wikia.nocookie.net/mlp/images/1/19/Rainbow_Dash_on_the_ground_without_her_wings_S02E01.png)
+![](https://static.wikia.nocookie.net/mlp/images/c/cc/TwilightRarity_WheresMyHorn_S02E01.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_16.html)
 
 # S2E02 
 ## The Return of Harmony, part 2
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/7/78/Rarity_about_to_leap_towards_Applejack_S2E02.png)
+![](https://static.wikia.nocookie.net/mlp/images/e/ee/Fluttershy_trampling_on_bush_S2E02.gif)
+![](https://static.wikia.nocookie.net/mlp/images/2/2f/Fluttershy_%22Your_face%21%22_S2E2.png)
+![](https://static.wikia.nocookie.net/mlp/images/c/c3/The_ponies_pull_Rainbow_Dash_down_S2E02.gif)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_20.html)
 
 # S2E03
 ## Lesson Zero
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/b/b1/Twilight_Sparkle_Magic_kindergarten_S2E3.png)
+![](https://static.wikia.nocookie.net/mlp/images/e/e7/Rarity_being_more_of_a_drama_queen_S2E3.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/65/Rainbow_Dash_Atomic_Rainboom_Explosion_S2E3.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/69/Clock_is_ticking_S02E03.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_25.html)
 
 # S2E04
 ## Luna Eclipsed
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/c/c3/Pinkie_Pie_wants_candies_S02E04.png)
+![](https://static.wikia.nocookie.net/mlp/images/3/34/Golden_Harvest_and_Derpy_S02E04.png)
+![](https://static.wikia.nocookie.net/mlp/images/8/8a/Twilight_talking_to_Pinkie_S2E04.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/70/Rainbow_Dash_gets_startled_S2E04.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_27.html)
 
 # S2E05
 ## Sisterhooves Social
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/f/f1/Sweetie_Belle_Burnt_S2E5.png
+![](https://static.wikia.nocookie.net/mlp/images/1/10/Rarity_and_Sweetie_Belle_fighting_S2E5.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/7c/Applejack_giving_Apple_Bloom_a_grape_juice_bath_S2E5.png)
+![](https://static.wikia.nocookie.net/mlp/images/c/c9/Apple_Bloom_Sweetie_Belle_fighting_over_Applejack_S2E05.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic.html)
  
 # S2E06
 ## The Cutie Pox
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/e/e5/Scootaloo_Bowling_2_S2E6.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/58/Apple_Bloom_being_lifted_upwards_S2E06.png)
+![](https://static.wikia.nocookie.net/mlp/images/1/1a/Crowd_of_ponies_watch_Rainbow_Dash_sleep_S2E6.png)
+![](https://static.wikia.nocookie.net/mlp/images/b/b3/Applejack_being_shaken_by_Apple_Bloom_S2E06.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_4.html)
  
 # S2E07
 ## May the Best Pet Wins!
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/0/0c/Rainbow_Dash_Scream_2_S2E7.png)
+![](https://static.wikia.nocookie.net/mlp/images/4/4a/Fluttershy_singing_S2E7.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/9b/Rainbow_Dash_taking_nap_on_tree_branch_S2E07.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/5f/Rainbow_Dash_providing_some_extra_lift_S2E07.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_11.html)
  
 # S2E08
 ## The Mysterious Mare Do Well
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/0/0a/Rainbow_Dash_happy_face_S2E8.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/5f/Rainbow_Danger_Dash_with_sunglasses_S2E8.png)
+![](https://static.wikia.nocookie.net/mlp/images/f/fe/Dam_breaking_S02E08.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/6d/Rainbow_Dash_ahhhhhhh_S2E8.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_18.html)
  
 # S2E09
 ## Sweet and Elite
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/e/e1/Rarity_thanking_Princess_Celestia_S2E09.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/d8/Rarity_winks_S2E9.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/74/Applejack_%26_Fluttershy_covered_in_cake_S2E9.png)
+![](https://static.wikia.nocookie.net/mlp/images/1/1e/Rainbow_Dash_Ponyville_style_S2E9.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic.html)
  
 # S2E10
 ## Secret of My Excess
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/1/1d/Twilight%27s_books_dropping_S2E10.png)
+![](https://static.wikia.nocookie.net/mlp/images/b/b5/Twilight_very_displeased_S2E10.png)
+![](https://static.wikia.nocookie.net/mlp/images/8/82/Pinkie_Pie_jumping_on_a_balloon_S02E10.gif)
+![](https://static.wikia.nocookie.net/mlp/images/1/17/Twilight_Sparkle_Applejack_tied_tree_S2E10.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic.html)
  
 # S2E11
 ## Hearth's Warming Eve
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/f/f5/Fluttershy_Shouting_Woohoo_S2E11.png)
+![](https://static.wikia.nocookie.net/mlp/images/4/4f/Pinkie_Pie%21%21%21_S2E11.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/64/Pinkie_Pie_down_the_chimney_S2E11.png)
+![](https://static.wikia.nocookie.net/mlp/images/1/15/Rarity_riding_Twilight_S2E11.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_8.html)
  
 # S2E12
 ## Family Appreciation Day
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/7/71/Applejack_hears_something_S2E12.png)
+![](https://static.wikia.nocookie.net/mlp/images/4/40/Filthy_Rich_hits_pot_with_spoon_S2E12.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/9c/Apple_Bloom_hit_herself_against_the_table_S02E12.png)
+![](https://static.wikia.nocookie.net/mlp/images/f/f4/ElectrifiedSweetieBelle_S02E12.png<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_13.html)
  
 # S2E13
 ## Baby Cakes
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/e/ec/Pinkie_Pie_I_wanna_see_S2E13.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/9c/Surprise%21_S2E13.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/92/Pinkie_Pie_snort_out_flour_S2E13.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/93/Pinkie_Pie_about_to_cry_S2E13.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_15.html)
  
 # S2E14
 ## The Last Roundup
-![]()
-![]()
-![]()
-![]()<br>
+握草 Derpy開口講話了
+![](https://static.wikia.nocookie.net/mlp/images/9/9d/Applejack_looking_slick_S2E14.png)
+![](https://static.wikia.nocookie.net/mlp/images/3/36/Derpy_Hooves_Thundercloud_1_S2E14.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/6f/Derpy_Hooves_Falling_S2E14.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/90/Pinkie_Pie_%22nopony_breaks_a_Pinkie_Promise%21%22_S2E14.png)<br>
+### "*Nopony breaks a Pinkie PROMISE!*"
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_20.html)
  
 # S2E15
 ## The Super Speed Cider Squeezy 6000
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/7/73/Fluttershy_embarrassed_S2E15.png)
+![](https://static.wikia.nocookie.net/mlp/images/4/47/Rainbow_Dash_is_skeptical_1_S2E15.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/d2/Rainbow_Dash_cheering_along_with_the_crowd_S2E15.gif)
+![](https://static.wikia.nocookie.net/mlp/images/3/31/Rainbow_Dash_cruel_joke_S2E15.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_22.html)
  
 # S2E16
 ## Read It and Weep
@@ -145,82 +147,86 @@ filename: ponyG4S2
 ![]()
 ![]()<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_27.html)
  
 # S2E17
 ## Hearts and Hooves Day
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/5/51/Pinkie_Pie_Saying_Rainbow_Dash_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/77/Rainbow_Dash_flying_past_3_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/58/Rainbow_Dash_wakes_up_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/27/Rainbow_turns_on_lamp_S2E16.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic.html)
  
 # S2E18
 ## A Friend in Deed
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/7/75/Pinkie_Pie_So_Much_Pain_S02E18.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/db/Pinkie_Pie_song_trot_S2E18.png)
+![](https://static.wikia.nocookie.net/mlp/images/3/36/Pinkie_Pie_Gone_Completely_Random_S02E18.png)
+![](https://static.wikia.nocookie.net/mlp/images/b/bb/Pinkie_Looking_Acorable_S02E18.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_6.html)
  
 # S2E19
-## APutting Your Hoof Down
-![]()
-![]()
-![]()
-![]()<br>
+## Putting Your Hoof Down
+![](https://static.wikia.nocookie.net/mlp/images/1/1a/Fluttershy_standing_with_lazy_eyes_S2E19.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/21/Fluttershy_blocking_water_S2E19.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/62/Frowning_Fluttershy_S2E19.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/d0/Flutterroar_S2E19.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_13.html)
  
 # S2E20 
 ## It's About time
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/0/06/Future_Twilight_Sparkle_S2E20.png)
+![](https://static.wikia.nocookie.net/mlp/images/6/61/Twilight_pacing_S2E20.png)
+![](https://static.wikia.nocookie.net/mlp/images/3/36/Twilight_covering_eye_S2E20.png)
+![](https://static.wikia.nocookie.net/mlp/images/9/9c/Twilight_with_flowerpot_on_her_head_S2E20.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_20.html)
 
 # S2E21 
 ## Dragon quest
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/0/07/Rainbow_Dash_dragging_Fluttershy_S2E21.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/77/Twilight_trying_to_convince_Fluttershy_S2E21.png)
+![](https://static.wikia.nocookie.net/mlp/images/8/8a/Fluttershy_yell_S2E21.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/d2/Phoenix_sunburst_2_S2E21.png)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic.html)
 
 # S2E22 
 ## Hurricane Fluttershy
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/5/5b/Fluttershy_looking_at_newspaper_on_her_head_S2E22.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/28/Derp_S2E22.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/76/Fluttershy_fake_faint_S2E22.png)
+![](https://static.wikia.nocookie.net/mlp/images/a/ae/Fluttershy_crying_S2E22.gif)<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_3.html)
 
 # S2E23 
 ## Ponyville Confidential
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/b/b5/Dirty_Scootaloo_and_Sweetie_Belle_S2E23.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/70/Sweetie_Belle_those_marks_S2E23.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/d8/Rarity_gasp_S2E23.png)
+![](https://static.wikia.nocookie.net/mlp/images/d/db/Ranibow_Dash_resting_S2E23.png)<br>
+I'll *destroy* her!
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_10.html)
 
 
 
 # S2E24
 ## MMMystery on the Friendship Express
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/b/be/Big_Mac_about_to_slip_S2E24.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/26/Pinkie_Pie_feeling_sleepy_S2E24.png)
+![](https://static.wikia.nocookie.net/mlp/images/8/80/Pinkie_Pie_sleeping_S2E24.png)
+![](https://static.wikia.nocookie.net/mlp/images/c/cf/Pinkie_Pie_gassed_2_S2E24.png)<br>
 ## 進入小馬國
-[點擊此處]()
-    
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_17.html)
+
+# `ＷＯＲＫ ＩＮ ＰＲＯＧＲＥＳＳ`
+我目前就看到這裡 等會再來
+
 # S2E25
 ## A Canterlot Wedding - Part 1
 ![]()
@@ -228,7 +234,7 @@ filename: ponyG4S2
 ![]()
 ![]()<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)
 
 # S2E26
 ## A Canterlot Wedding - Part 2
@@ -237,7 +243,7 @@ filename: ponyG4S2
 ![]()
 ![]()<br>
 ## 進入小馬國
-[點擊此處]()    
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)    
 
 # 前往下一季
 [點擊此處]()https://linbei9487.github.io/pony/G4/S3)    
