--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -41,7 +41,7 @@ filename: ponyG4S2
 
 # S2E05
 ## Sisterhooves Social
-![](https://static.wikia.nocookie.net/mlp/images/f/f1/Sweetie_Belle_Burnt_S2E5.png
+![](https://static.wikia.nocookie.net/mlp/images/f/f1/Sweetie_Belle_Burnt_S2E5.png)
 ![](https://static.wikia.nocookie.net/mlp/images/1/10/Rarity_and_Sweetie_Belle_fighting_S2E5.png)
 ![](https://static.wikia.nocookie.net/mlp/images/7/7c/Applejack_giving_Apple_Bloom_a_grape_juice_bath_S2E5.png)
 ![](https://static.wikia.nocookie.net/mlp/images/c/c9/Apple_Bloom_Sweetie_Belle_fighting_over_Applejack_S2E05.png)<br>
@@ -107,7 +107,7 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/7/71/Applejack_hears_something_S2E12.png)
 ![](https://static.wikia.nocookie.net/mlp/images/4/40/Filthy_Rich_hits_pot_with_spoon_S2E12.png)
 ![](https://static.wikia.nocookie.net/mlp/images/9/9c/Apple_Bloom_hit_herself_against_the_table_S02E12.png)
-![](https://static.wikia.nocookie.net/mlp/images/f/f4/ElectrifiedSweetieBelle_S02E12.png<br>
+![](https://static.wikia.nocookie.net/mlp/images/f/f4/ElectrifiedSweetieBelle_S02E12.png)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_13.html)
  
@@ -122,7 +122,7 @@ filename: ponyG4S2
  
 # S2E14
 ## The Last Roundup
-握草 Derpy開口講話了
+握草 Derpy開口講話了<br>
 ![](https://static.wikia.nocookie.net/mlp/images/9/9d/Applejack_looking_slick_S2E14.png)
 ![](https://static.wikia.nocookie.net/mlp/images/3/36/Derpy_Hooves_Thundercloud_1_S2E14.png)
 ![](https://static.wikia.nocookie.net/mlp/images/6/6f/Derpy_Hooves_Falling_S2E14.png)
@@ -142,19 +142,19 @@ filename: ponyG4S2
  
 # S2E16
 ## Read It and Weep
-![]()
-![]()
-![]()
-![]()<br>
+![](https://static.wikia.nocookie.net/mlp/images/5/51/Pinkie_Pie_Saying_Rainbow_Dash_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/7/77/Rainbow_Dash_flying_past_3_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/58/Rainbow_Dash_wakes_up_S2E16.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/27/Rainbow_turns_on_lamp_S2E16.png)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_27.html)
  
 # S2E17
 ## Hearts and Hooves Day
-![](https://static.wikia.nocookie.net/mlp/images/5/51/Pinkie_Pie_Saying_Rainbow_Dash_S2E16.png)
-![](https://static.wikia.nocookie.net/mlp/images/7/77/Rainbow_Dash_flying_past_3_S2E16.png)
-![](https://static.wikia.nocookie.net/mlp/images/5/58/Rainbow_Dash_wakes_up_S2E16.png)
-![](https://static.wikia.nocookie.net/mlp/images/2/27/Rainbow_turns_on_lamp_S2E16.png)<br>
+![](https://static.wikia.nocookie.net/mlp/images/1/1c/Cheerilee_calls_card_%22big%22_S2E17.png)
+![](https://static.wikia.nocookie.net/mlp/images/5/5b/Sweetie_Belle_with_arms_around_flagpole_S2E17.png)
+![](https://static.wikia.nocookie.net/mlp/images/8/84/CMC_clutching_the_book_S2E17.png)
+![](https://static.wikia.nocookie.net/mlp/images/2/29/CMC_Ingredients_03_S02E17.png)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic.html)
  
@@ -224,7 +224,7 @@ I'll *destroy* her!
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_17.html)
 
-# `ＷＯＲＫ ＩＮ ＰＲＯＧＲＥＳＳ`
+# **ＷＯＲＫ ＩＮ ＰＲＯＧＲＥＳＳ**
 我目前就看到這裡 等會再來
 
 # S2E25
