--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -246,4 +246,4 @@ I'll *destroy* her!
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)    
 
 # 前往下一季
-[點擊此處]()https://linbei9487.github.io/pony/G4/S3)    
+[點擊此處](https://linbei9487.github.io/pony/G4/S3)    
