--- a/pony/G4/S9.md
+++ b/pony/G4/S9.md
@@ -240,4 +240,4 @@ filename: ponyG4S9
 [點擊此處]()    
 
 # Another Generation
-[點擊此處]()https://linbei9487.github.io/pony/G5/AnG)    
+[點擊此處](https://linbei9487.github.io/pony/G5/AnG)    
