--- a/pony/G4/S8.md
+++ b/pony/G4/S8.md
@@ -240,4 +240,4 @@ filename: ponyG4S8
 [點擊此處]()    
 
 # 前往下一季
-[點擊此處]()https://linbei9487.github.io/pony/G4/S9)    
+[點擊此處](https://linbei9487.github.io/pony/G4/S9)    
