--- a/pony/G4/S4.md
+++ b/pony/G4/S4.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 4
 layout: backpony
 filename: ponyG4S4
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S3)
+
 # WARNING!
 ## 本季開始具有1~3季的延伸劇情
 若未完成請先返回觀看1~3季<br>
