--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 2
 layout: backpony
 filename: ponyG4S2
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S1)
+
 # S2E01 
 ## The Return of Harmony, part 1
 ![](https://static.wikia.nocookie.net/mlp/images/e/e3/Cheerilee_sighs_S2E01.png/revision/latest)
