--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 3
 layout: backpony
 filename: ponyG4S3
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S2)
+
 # S3E01 
 ## Friendship is Magic, part 1
 ![]()
