--- a/pony/G4/S6.md
+++ b/pony/G4/S6.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 6
 layout: backpony
 filename: ponyG4S2
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S5)
+
 # S6E01 
 ## Friendship is Magic, part 1
 ![]()
