--- a/pony/G4/S7.md
+++ b/pony/G4/S7.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 7
 layout: backpony
 filename: ponyG4S7
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S6)
+
 # S7E01 
 ## Friendship is Magic, part 1
 ![]()
