--- a/pony/G4/S8.md
+++ b/pony/G4/S8.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 8
 layout: backpony
 filename: ponyG4S8
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S7)
+
 # S8E01 
 ## Friendship is Magic, part 1
 ![]()
