--- a/pony/G4/S9.md
+++ b/pony/G4/S9.md
@@ -3,6 +3,9 @@ title: Twilight's Library Season 9
 layout: backpony
 filename: ponyG4S9
 --- 
+# 回到上一季
+[點擊此處](https://linbei9487.github.io/pony/G4/S8)
+
 # S9E01 
 ## Friendship is Magic, part 1
 ![]()
