--- a/testpage/S2.md
+++ b/testpage/S2.md
@@ -15,7 +15,7 @@ filename: ponyG4S2
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_16.html)<br>
 Password:4093    
-<iframe allowfullscreen="true" frameborder="0" height="360" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/Q1hOaVlmLTQ2Njk3MzYuZmx2?ar=0&as=0" width="640"></iframe>
+<iframe allowfullscreen="true" frameborder="0" height="360" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/Q1hOaVlmLTQ2Njk3MzYuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 # S2E02 
 ## The Return of Harmony, part 2
 ![](https://static.wikia.nocookie.net/mlp/images/7/78/Rarity_about_to_leap_towards_Applejack_S2E02.png/revision/latest)
