--- a/testpage/S3.md
+++ b/testpage/S3.md
@@ -162,7 +162,7 @@ filename: ponyG4S3
 
 # 前往下一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S4)  
-  
+
 <script>
 var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/json/episode.json"
     var request = new XMLHttpRequest();
@@ -173,8 +173,8 @@ var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github
     var data2 = JSON.parse(request.responseText);
     var step;
     for (step=0; step < 12 ; step++){
-        document.getElementById("p"+ step).innerHTML =(data2.episode[id].pw)
-        document.getElementById("m"+ step).src =(data2.episode[id].link)
+        document.getElementById("p"+ step).innerHTML =(data2.episode[step].pw)
+        document.getElementById("m"+ step).src =(data2.episode[step].link)
         id++
         }};
 </script>
