--- a/testpage/S3.md
+++ b/testpage/S3.md
@@ -173,7 +173,7 @@ var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github
     var data2 = JSON.parse(request.responseText);
     var step;
     for (step=0; step < 12 ; step++){
-        document.getElementById("p"+ step).innerHTML =(data2.episode[step].pw)
+        document.getElementById("p"+ step).innerHTML =("Password: "+ (data2.episode[step].pw))
         document.getElementById("m"+ step).src =(data2.episode[step].link)
         step++
         }};
